[package]
name = "postgis-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["postgis-sys"]


[dependencies]
postgis-sys = { path = "./postgis-sys" }
lwgeom.workspace = true
lwgeom-sys.workspace = true

[workspace.dependencies]
lwgeom-sys = { git = "https://github.com/xhwhis/lwgeom" }
lwgeom = { git = "https://github.com/xhwhis/lwgeom" }
